# ICD10-Perdiction

./: .gitignore  FIXES.md  Models.md  README.md  clinical_icd_prd.md  clinical_icd_prompt.md  pyproject.toml
Dataset/icd10orderfiles/: icd10cm_codes_addenda_2026.txt  icd10cm_order_addenda_2026.txt
app/: main.py
app/api/: router.py
app/api/routes/: analyze.py  billing.py  meta.py
app/core/: config.py
app/domain/: schemas.py
app/services/: billing.py  catalog.py  diagnosis.py  documentation.py  extractor.py  icd_judge.py  icd_prediction.py  mongo.py  pdf_report.py  pipeline.py  reporting.py  retriever.py  risks.py  rules.py  understanding.py
app/static/: review.css  review.html  review.js
docs/: architecture.md  model-setup.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: PdfViewer.tsx
frontend/src/components/Billing/: CMS1500Form.tsx  ClaimVerifier.tsx  CostEstimatePanel.tsx  IndianBillingForm.tsx
frontend/src/components/Dashboard/: ClinicalInput.tsx  PipelineVisualizer.tsx  ResultsPanels.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/context/: AnalysisContext.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: AnalysisInputPage.tsx  AnalysisProcessingPage.tsx  AnalysisResultsPage.tsx  BillingPage.tsx  HistoryPage.tsx  ReportPage.tsx
scripts/: build_icd_index.py
tests/: conftest.py  test_meta.py  test_pipeline.py
